tests/snapshots/golden_cli__list_human.snap
---
source: tests/golden_cli.rs
---
$ story list
3 closed stories match but are not shown — add --include-closed or --all
SH-1 [in-progress] (critical) [epic] Design the storage engine (0/3)
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-3 [in-progress] (high) [normal] Implement the SQLite engine [backend, phase:1]
SH-4 [review] (medium) [normal] Write the migration runner [backend]
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]
SH-6 [todo] (low) [spike] Benchmark the rebuild path
SH-7 [todo] (low) [chore] Document the data layer
SH-9 [todo] (medium) [normal] Add the daemon transport [phase:2]
SH-10 [todo] (medium) [normal] Ship the CLI shim
SH-11 [todo] (low) [normal] Audit error codes
SH-12 [todo] (high) [normal] Harden concurrent writes
SH-15 [todo] (low) [epic] Track engine adoption (0/1)
SH-16 [todo] (low) [normal] Approve the rollout [no-auto]

$ story list --state todo
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]
SH-6 [todo] (low) [spike] Benchmark the rebuild path
SH-7 [todo] (low) [chore] Document the data layer
SH-9 [todo] (medium) [normal] Add the daemon transport [phase:2]
SH-10 [todo] (medium) [normal] Ship the CLI shim
SH-11 [todo] (low) [normal] Audit error codes
SH-12 [todo] (high) [normal] Harden concurrent writes
SH-15 [todo] (low) [epic] Track engine adoption (0/1)
SH-16 [todo] (low) [normal] Approve the rollout [no-auto]

$ story list --state review
SH-4 [review] (medium) [normal] Write the migration runner [backend]

$ story list --state done
including closed stories: `done` is a closed state
SH-8 [done] (low) [chore] Retire the JSONL reader
SH-14 [done] (medium) [spike] Prototype the archive format

$ story list --type bug
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]

$ story list --type spike
1 closed story match but is not shown — add --include-closed or --all
SH-6 [todo] (low) [spike] Benchmark the rebuild path

$ story list --type none
no stories found

$ story list --priority critical,high
SH-1 [in-progress] (critical) [epic] Design the storage engine (0/3)
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-3 [in-progress] (high) [normal] Implement the SQLite engine [backend, phase:1]
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]
SH-12 [todo] (high) [normal] Harden concurrent writes

$ story list --priority none
no stories found

$ story list --label backend
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-3 [in-progress] (high) [normal] Implement the SQLite engine [backend, phase:1]
SH-4 [review] (medium) [normal] Write the migration runner [backend]

$ story list --label api,defect
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]

$ story list --flagged
no stories found

$ story list --blocked
SH-3 [in-progress] (high) [normal] Implement the SQLite engine [backend, phase:1]
SH-6 [todo] (low) [spike] Benchmark the rebuild path
SH-9 [todo] (medium) [normal] Add the daemon transport [phase:2]

$ story list --ready
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-4 [review] (medium) [normal] Write the migration runner [backend]
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]
SH-7 [todo] (low) [chore] Document the data layer
SH-10 [todo] (medium) [normal] Ship the CLI shim
SH-11 [todo] (low) [normal] Audit error codes
SH-12 [todo] (high) [normal] Harden concurrent writes
SH-16 [todo] (low) [normal] Approve the rollout [no-auto]

$ story list --phase 1
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-3 [in-progress] (high) [normal] Implement the SQLite engine [backend, phase:1]

$ story list --phase 9
no stories found

$ story list --stale 1h
no stories found

$ story list --created-after 2000-01-01
3 closed stories match but are not shown — add --include-closed or --all
SH-1 [in-progress] (critical) [epic] Design the storage engine (0/3)
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-3 [in-progress] (high) [normal] Implement the SQLite engine [backend, phase:1]
SH-4 [review] (medium) [normal] Write the migration runner [backend]
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]
SH-6 [todo] (low) [spike] Benchmark the rebuild path
SH-7 [todo] (low) [chore] Document the data layer
SH-9 [todo] (medium) [normal] Add the daemon transport [phase:2]
SH-10 [todo] (medium) [normal] Ship the CLI shim
SH-11 [todo] (low) [normal] Audit error codes
SH-12 [todo] (high) [normal] Harden concurrent writes
SH-15 [todo] (low) [epic] Track engine adoption (0/1)
SH-16 [todo] (low) [normal] Approve the rollout [no-auto]

$ story list --created-after 2999-01-01
no stories found

$ story list --updated-after 2000-01-01
3 closed stories match but are not shown — add --include-closed or --all
SH-1 [in-progress] (critical) [epic] Design the storage engine (0/3)
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-3 [in-progress] (high) [normal] Implement the SQLite engine [backend, phase:1]
SH-4 [review] (medium) [normal] Write the migration runner [backend]
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]
SH-6 [todo] (low) [spike] Benchmark the rebuild path
SH-7 [todo] (low) [chore] Document the data layer
SH-9 [todo] (medium) [normal] Add the daemon transport [phase:2]
SH-10 [todo] (medium) [normal] Ship the CLI shim
SH-11 [todo] (low) [normal] Audit error codes
SH-12 [todo] (high) [normal] Harden concurrent writes
SH-15 [todo] (low) [epic] Track engine adoption (0/1)
SH-16 [todo] (low) [normal] Approve the rollout [no-auto]

$ story list --state todo --priority critical
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]

$ story list --type normal --label backend
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-3 [in-progress] (high) [normal] Implement the SQLite engine [backend, phase:1]
SH-4 [review] (medium) [normal] Write the migration runner [backend]

$ story list --include-closed
SH-1 [in-progress] (critical) [epic] Design the storage engine (0/3)
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-3 [in-progress] (high) [normal] Implement the SQLite engine [backend, phase:1]
SH-4 [review] (medium) [normal] Write the migration runner [backend]
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]
SH-6 [todo] (low) [spike] Benchmark the rebuild path
SH-7 [todo] (low) [chore] Document the data layer
SH-8 [done] (low) [chore] Retire the JSONL reader
SH-9 [todo] (medium) [normal] Add the daemon transport [phase:2]
SH-10 [todo] (medium) [normal] Ship the CLI shim
SH-11 [todo] (low) [normal] Audit error codes
SH-12 [todo] (high) [normal] Harden concurrent writes
SH-13 [dropped] (low) [chore] Old approach: file-per-story
SH-14 [done] (medium) [spike] Prototype the archive format
SH-15 [todo] (low) [epic] Track engine adoption (0/1)
SH-16 [todo] (low) [normal] Approve the rollout [no-auto]

$ story list --include-archived
SH-1 [in-progress] (critical) [epic] Design the storage engine (0/3)
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-3 [in-progress] (high) [normal] Implement the SQLite engine [backend, phase:1]
SH-4 [review] (medium) [normal] Write the migration runner [backend]
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]
SH-6 [todo] (low) [spike] Benchmark the rebuild path
SH-7 [todo] (low) [chore] Document the data layer
SH-8 [done] (low) [chore] Retire the JSONL reader
SH-9 [todo] (medium) [normal] Add the daemon transport [phase:2]
SH-10 [todo] (medium) [normal] Ship the CLI shim
SH-11 [todo] (low) [normal] Audit error codes
SH-12 [todo] (high) [normal] Harden concurrent writes
SH-13 [dropped] (low) [chore] Old approach: file-per-story
SH-14 [done] (medium) [spike] Prototype the archive format
SH-15 [todo] (low) [epic] Track engine adoption (0/1)
SH-16 [todo] (low) [normal] Approve the rollout [no-auto]

$ story list --all
SH-1 [in-progress] (critical) [epic] Design the storage engine (0/3)
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-3 [in-progress] (high) [normal] Implement the SQLite engine [backend, phase:1]
SH-4 [review] (medium) [normal] Write the migration runner [backend]
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]
SH-6 [todo] (low) [spike] Benchmark the rebuild path
SH-7 [todo] (low) [chore] Document the data layer
SH-8 [done] (low) [chore] Retire the JSONL reader
SH-9 [todo] (medium) [normal] Add the daemon transport [phase:2]
SH-10 [todo] (medium) [normal] Ship the CLI shim
SH-11 [todo] (low) [normal] Audit error codes
SH-12 [todo] (high) [normal] Harden concurrent writes
SH-13 [dropped] (low) [chore] Old approach: file-per-story
SH-14 [done] (medium) [spike] Prototype the archive format
SH-15 [todo] (low) [epic] Track engine adoption (0/1)
SH-16 [todo] (low) [normal] Approve the rollout [no-auto]
