tests/snapshots/golden_cli__narrative_human.snap
---
source: tests/golden_cli.rs
---
$ story context
# Project Status

Stories: 16 (13 open, 3 closed)

Read `story help complexity-rubric` before assessing complexity. `story dispatch-policy show` lists automatic launch settings.

## State Distribution

- done: 2
- dropped: 1
- in-progress: 2
- review: 1
- todo: 10

## Type Distribution

- bug: 1
- chore: 3
- epic: 2
- normal: 8
- spike: 2

## Ready to Work (8 total)

- SH-5 Fix the id collision across worktrees (critical); complexity: medium (unassessed)
- SH-2 Define the Store trait (high); complexity: medium (unassessed)
- SH-12 Harden concurrent writes (high); complexity: medium (unassessed)
- SH-4 Write the migration runner (medium); complexity: medium (unassessed)
- SH-10 Ship the CLI shim (medium); complexity: medium (unassessed)

## Blocked (3)

- SH-3 Implement the SQLite engine
- SH-6 Benchmark the rebuild path — awaiting: waiting on the benchmark harness
- SH-9 Add the daemon transport

## Phase Progress

- Phase 1 -- 0/2 done, 1 in-progress, 1 blocked
- Phase 2 -- 0/1 done, 1 blocked


$ story context --format json
{
  "blocked_count": 3,
  "by_state": {
    "done": 2,
    "dropped": 1,
    "in-progress": 2,
    "review": 1,
    "todo": 10
  },
  "by_type": {
    "bug": 1,
    "chore": 3,
    "epic": 2,
    "normal": 8,
    "spike": 2
  },
  "closed": 3,
  "open": 13,
  "ready_count": 8,
  "ready_stories": [
    {
      "complexity": "medium",
      "complexity_assessed": false,
      "id": "SH-5",
      "priority": "critical",
      "state": "todo",
      "title": "Fix the id collision across worktrees"
    },
    {
      "complexity": "medium",
      "complexity_assessed": false,
      "id": "SH-2",
      "priority": "high",
      "state": "todo",
      "title": "Define the Store trait"
    },
    {
      "complexity": "medium",
      "complexity_assessed": false,
      "id": "SH-12",
      "priority": "high",
      "state": "todo",
      "title": "Harden concurrent writes"
    },
    {
      "complexity": "medium",
      "complexity_assessed": false,
      "id": "SH-4",
      "priority": "medium",
      "state": "review",
      "title": "Write the migration runner"
    },
    {
      "complexity": "medium",
      "complexity_assessed": false,
      "id": "SH-10",
      "priority": "medium",
      "state": "todo",
      "title": "Ship the CLI shim"
    }
  ],
  "total_stories": 16,
  "verifier": {
    "active": null,
    "control": "running",
    "evidence_error": null,
    "first_hit_story": null,
    "held_reasons": [],
    "held_stories": [],
    "incident": null,
    "incident_age_seconds": null,
    "incident_is_current": false,
    "last_evidence_at": null,
    "project": "[project]",
    "project_recoveries": [],
    "recovery": {
      "acknowledgement": null,
      "request": null
    },
    "retry_count": 0,
    "silence_seconds": null,
    "verifying": [],
    "warning": null
  }
}

$ story load-context
# Project Status

Stories: 16 (13 open, 3 closed)

Read `story help complexity-rubric` before assessing complexity. `story dispatch-policy show` lists automatic launch settings.

## State Distribution

- done: 2
- dropped: 1
- in-progress: 2
- review: 1
- todo: 10

## Type Distribution

- bug: 1
- chore: 3
- epic: 2
- normal: 8
- spike: 2

## Ready to Work (8 total)

- SH-5 Fix the id collision across worktrees (critical); complexity: medium (unassessed)
- SH-2 Define the Store trait (high); complexity: medium (unassessed)
- SH-12 Harden concurrent writes (high); complexity: medium (unassessed)
- SH-4 Write the migration runner (medium); complexity: medium (unassessed)
- SH-10 Ship the CLI shim (medium); complexity: medium (unassessed)

## Blocked (3)

- SH-3 Implement the SQLite engine
- SH-6 Benchmark the rebuild path — awaiting: waiting on the benchmark harness
- SH-9 Add the daemon transport

## Phase Progress

- Phase 1 -- 0/2 done, 1 in-progress, 1 blocked
- Phase 2 -- 0/1 done, 1 blocked


$ story handoff
# Session Handoff

## Created (13)

- SH-1 Design the storage engine [in-progress]
- SH-2 Define the Store trait [todo]
- SH-3 Implement the SQLite engine [in-progress]
- SH-4 Write the migration runner [review]
- SH-5 Fix the id collision across worktrees [todo]
- SH-6 Benchmark the rebuild path [todo]
- SH-7 Document the data layer [todo]
- SH-9 Add the daemon transport [todo]
- SH-10 Ship the CLI shim [todo]
- SH-11 Audit error codes [todo]
- SH-12 Harden concurrent writes [todo]
- SH-15 Track engine adoption [todo]
- SH-16 Approve the rollout [todo]

## Closed (3)

- SH-8 Retire the JSONL reader [done]
- SH-13 Old approach: file-per-story [dropped]
- SH-14 Prototype the archive format [done]



$ story handoff --since 7d
# Session Handoff

## Created (13)

- SH-1 Design the storage engine [in-progress]
- SH-2 Define the Store trait [todo]
- SH-3 Implement the SQLite engine [in-progress]
- SH-4 Write the migration runner [review]
- SH-5 Fix the id collision across worktrees [todo]
- SH-6 Benchmark the rebuild path [todo]
- SH-7 Document the data layer [todo]
- SH-9 Add the daemon transport [todo]
- SH-10 Ship the CLI shim [todo]
- SH-11 Audit error codes [todo]
- SH-12 Harden concurrent writes [todo]
- SH-15 Track engine adoption [todo]
- SH-16 Approve the rollout [todo]

## Closed (3)

- SH-8 Retire the JSONL reader [done]
- SH-13 Old approach: file-per-story [dropped]
- SH-14 Prototype the archive format [done]



$ story handoff --since 2h
# Session Handoff

## Created (13)

- SH-1 Design the storage engine [in-progress]
- SH-2 Define the Store trait [todo]
- SH-3 Implement the SQLite engine [in-progress]
- SH-4 Write the migration runner [review]
- SH-5 Fix the id collision across worktrees [todo]
- SH-6 Benchmark the rebuild path [todo]
- SH-7 Document the data layer [todo]
- SH-9 Add the daemon transport [todo]
- SH-10 Ship the CLI shim [todo]
- SH-11 Audit error codes [todo]
- SH-12 Harden concurrent writes [todo]
- SH-15 Track engine adoption [todo]
- SH-16 Approve the rollout [todo]

## Closed (3)

- SH-8 Retire the JSONL reader [done]
- SH-13 Old approach: file-per-story [dropped]
- SH-14 Prototype the archive format [done]
