tests/snapshots/golden_cli__narrative_json.snap
---
source: tests/golden_cli.rs
---
[
  {
    "argv": "story context --json",
    "stdout": {
      "message": "# Project Status\n\nStories: 16 (13 open, 3 closed)\n\nRead `story help complexity-rubric` before assessing complexity. `story dispatch-policy show` lists automatic launch settings.\n\n## State Distribution\n\n- done: 2\n- dropped: 1\n- in-progress: 2\n- review: 1\n- todo: 10\n\n## Type Distribution\n\n- bug: 1\n- chore: 3\n- epic: 2\n- normal: 8\n- spike: 2\n\n## Ready to Work (8 total)\n\n- SH-5 Fix the id collision across worktrees (critical); complexity: medium (unassessed)\n- SH-2 Define the Store trait (high); complexity: medium (unassessed)\n- SH-12 Harden concurrent writes (high); complexity: medium (unassessed)\n- SH-4 Write the migration runner (medium); complexity: medium (unassessed)\n- SH-10 Ship the CLI shim (medium); complexity: medium (unassessed)\n\n## Blocked (3)\n\n- SH-3 Implement the SQLite engine\n- SH-6 Benchmark the rebuild path — awaiting: waiting on the benchmark harness\n- SH-9 Add the daemon transport\n\n## Phase Progress\n\n- Phase 1 -- 0/2 done, 1 in-progress, 1 blocked\n- Phase 2 -- 0/1 done, 1 blocked\n",
      "result": "ok",
      "verifier": {
        "active": null,
        "attribution_holds": [],
        "control": "running",
        "evidence_error": null,
        "first_hit_story": null,
        "held_reasons": [],
        "held_stories": [],
        "incident": null,
        "incident_age_seconds": null,
        "incident_is_current": false,
        "last_evidence_at": null,
        "project": "[project]",
        "project_recoveries": [],
        "recovery": {
          "acknowledgement": null,
          "request": null
        },
        "retry_count": 0,
        "silence_seconds": null,
        "verifying": [],
        "warning": null
      }
    }
  },
  {
    "argv": "story context --format json --json",
    "stdout": {
      "blocked_count": 3,
      "by_state": {
        "done": 2,
        "dropped": 1,
        "in-progress": 2,
        "review": 1,
        "todo": 10
      },
      "by_type": {
        "bug": 1,
        "chore": 3,
        "epic": 2,
        "normal": 8,
        "spike": 2
      },
      "closed": 3,
      "open": 13,
      "ready_count": 8,
      "ready_stories": [
        {
          "complexity": "medium",
          "complexity_assessed": false,
          "id": "SH-5",
          "priority": "critical",
          "state": "todo",
          "title": "Fix the id collision across worktrees"
        },
        {
          "complexity": "medium",
          "complexity_assessed": false,
          "id": "SH-2",
          "priority": "high",
          "state": "todo",
          "title": "Define the Store trait"
        },
        {
          "complexity": "medium",
          "complexity_assessed": false,
          "id": "SH-12",
          "priority": "high",
          "state": "todo",
          "title": "Harden concurrent writes"
        },
        {
          "complexity": "medium",
          "complexity_assessed": false,
          "id": "SH-4",
          "priority": "medium",
          "state": "review",
          "title": "Write the migration runner"
        },
        {
          "complexity": "medium",
          "complexity_assessed": false,
          "id": "SH-10",
          "priority": "medium",
          "state": "todo",
          "title": "Ship the CLI shim"
        }
      ],
      "total_stories": 16,
      "verifier": {
        "active": null,
        "attribution_holds": [],
        "control": "running",
        "evidence_error": null,
        "first_hit_story": null,
        "held_reasons": [],
        "held_stories": [],
        "incident": null,
        "incident_age_seconds": null,
        "incident_is_current": false,
        "last_evidence_at": null,
        "project": "[project]",
        "project_recoveries": [],
        "recovery": {
          "acknowledgement": null,
          "request": null
        },
        "retry_count": 0,
        "silence_seconds": null,
        "verifying": [],
        "warning": null
      }
    }
  },
  {
    "argv": "story load-context --json",
    "stdout": {
      "message": "# Project Status\n\nStories: 16 (13 open, 3 closed)\n\nRead `story help complexity-rubric` before assessing complexity. `story dispatch-policy show` lists automatic launch settings.\n\n## State Distribution\n\n- done: 2\n- dropped: 1\n- in-progress: 2\n- review: 1\n- todo: 10\n\n## Type Distribution\n\n- bug: 1\n- chore: 3\n- epic: 2\n- normal: 8\n- spike: 2\n\n## Ready to Work (8 total)\n\n- SH-5 Fix the id collision across worktrees (critical); complexity: medium (unassessed)\n- SH-2 Define the Store trait (high); complexity: medium (unassessed)\n- SH-12 Harden concurrent writes (high); complexity: medium (unassessed)\n- SH-4 Write the migration runner (medium); complexity: medium (unassessed)\n- SH-10 Ship the CLI shim (medium); complexity: medium (unassessed)\n\n## Blocked (3)\n\n- SH-3 Implement the SQLite engine\n- SH-6 Benchmark the rebuild path — awaiting: waiting on the benchmark harness\n- SH-9 Add the daemon transport\n\n## Phase Progress\n\n- Phase 1 -- 0/2 done, 1 in-progress, 1 blocked\n- Phase 2 -- 0/1 done, 1 blocked\n",
      "result": "ok",
      "verifier": {
        "active": null,
        "attribution_holds": [],
        "control": "running",
        "evidence_error": null,
        "first_hit_story": null,
        "held_reasons": [],
        "held_stories": [],
        "incident": null,
        "incident_age_seconds": null,
        "incident_is_current": false,
        "last_evidence_at": null,
        "project": "[project]",
        "project_recoveries": [],
        "recovery": {
          "acknowledgement": null,
          "request": null
        },
        "retry_count": 0,
        "silence_seconds": null,
        "verifying": [],
        "warning": null
      }
    }
  },
  {
    "argv": "story handoff --json",
    "stdout": {
      "message": "# Session Handoff\n\n## Created (13)\n\n- SH-1 Design the storage engine [in-progress]\n- SH-2 Define the Store trait [todo]\n- SH-3 Implement the SQLite engine [in-progress]\n- SH-4 Write the migration runner [review]\n- SH-5 Fix the id collision across worktrees [todo]\n- SH-6 Benchmark the rebuild path [todo]\n- SH-7 Document the data layer [todo]\n- SH-9 Add the daemon transport [todo]\n- SH-10 Ship the CLI shim [todo]\n- SH-11 Audit error codes [todo]\n- SH-12 Harden concurrent writes [todo]\n- SH-15 Track engine adoption [todo]\n- SH-16 Approve the rollout [todo]\n\n## Closed (3)\n\n- SH-8 Retire the JSONL reader [done]\n- SH-13 Old approach: file-per-story [dropped]\n- SH-14 Prototype the archive format [done]\n\n",
      "result": "ok"
    }
  },
  {
    "argv": "story handoff --since 7d --json",
    "stdout": {
      "message": "# Session Handoff\n\n## Created (13)\n\n- SH-1 Design the storage engine [in-progress]\n- SH-2 Define the Store trait [todo]\n- SH-3 Implement the SQLite engine [in-progress]\n- SH-4 Write the migration runner [review]\n- SH-5 Fix the id collision across worktrees [todo]\n- SH-6 Benchmark the rebuild path [todo]\n- SH-7 Document the data layer [todo]\n- SH-9 Add the daemon transport [todo]\n- SH-10 Ship the CLI shim [todo]\n- SH-11 Audit error codes [todo]\n- SH-12 Harden concurrent writes [todo]\n- SH-15 Track engine adoption [todo]\n- SH-16 Approve the rollout [todo]\n\n## Closed (3)\n\n- SH-8 Retire the JSONL reader [done]\n- SH-13 Old approach: file-per-story [dropped]\n- SH-14 Prototype the archive format [done]\n\n",
      "result": "ok"
    }
  },
  {
    "argv": "story handoff --since 2h --json",
    "stdout": {
      "message": "# Session Handoff\n\n## Created (13)\n\n- SH-1 Design the storage engine [in-progress]\n- SH-2 Define the Store trait [todo]\n- SH-3 Implement the SQLite engine [in-progress]\n- SH-4 Write the migration runner [review]\n- SH-5 Fix the id collision across worktrees [todo]\n- SH-6 Benchmark the rebuild path [todo]\n- SH-7 Document the data layer [todo]\n- SH-9 Add the daemon transport [todo]\n- SH-10 Ship the CLI shim [todo]\n- SH-11 Audit error codes [todo]\n- SH-12 Harden concurrent writes [todo]\n- SH-15 Track engine adoption [todo]\n- SH-16 Approve the rollout [todo]\n\n## Closed (3)\n\n- SH-8 Retire the JSONL reader [done]\n- SH-13 Old approach: file-per-story [dropped]\n- SH-14 Prototype the archive format [done]\n\n",
      "result": "ok"
    }
  }
]
