tests/snapshots/golden_cli__next_human.snap
---
source: tests/golden_cli.rs
---
$ story next
SH-5 Fix the id collision across worktrees
state: todo (OPEN)
draft: no
priority: critical
type: bug
labels: defect
flagged: no
relationships:
- blocks SH-9
comments:
- [timestamp] Reproduced with two linked worktrees.
- [timestamp] Root cause is the committed next-id counter.

$ story next --count 3
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-12 [todo] (high) [normal] Harden concurrent writes

$ story next --count 99
SH-5 [todo] (critical) [bug] Fix the id collision across worktrees [defect]
SH-2 [todo] (high) [normal] Define the Store trait [api, backend, phase:1]
SH-12 [todo] (high) [normal] Harden concurrent writes
SH-4 [review] (medium) [normal] Write the migration runner [backend]
SH-9 [todo] (medium) [normal] Add the daemon transport [phase:2]
SH-10 [todo] (medium) [normal] Ship the CLI shim
SH-7 [todo] (low) [chore] Document the data layer
SH-11 [todo] (low) [normal] Audit error codes
SH-16 [todo] (low) [normal] Approve the rollout [no-auto]

$ story next --phase 1
SH-2 Define the Store trait
state: todo (OPEN)
draft: no
priority: high
type: normal
labels: api, backend, phase:1
flagged: no
relationships:
- blocks SH-3
- child-of SH-1
comments:
- [timestamp] Trait shape settled: one method per verb.

$ story next --phase 9
no ready stories
